test/Sema/recursive-deduction.src
// V %srcc --sema --verify %s
program test;

// expected-error@+2: Cannot call procedure before its return type has been deduced
// expected-note@+1: Declared here
proc x = x();

// No error here since we have already diagnosed that there
// is a problem with x.
x();
